QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog


0.5.3  2018-07-22  A Summer'18 Release.

- Portuguese (pt) translation added (by Heitor Rocha).

- AppData/AppStream metadata is now settled under an all
  permisssive license (FSFAP).

- Improved Graph rubberband add (Shift) and toggle (Ctrl)
  multiple (de)selections.

- Added user preference option: Setup / Misc / Buttons /
  Replace Connections with Graph button (on main window).

- Added a zoom slider control to the Graph view status bar.


0.5.2  2018-05-27  Pre-LAC2018 release frenzy hotfix.

- Respect ALSA Sequencer support option also on Graph view.

- Regression to new Graph node/ports sorting comparator;
  also fixed multiple and many port removals, most probably
  causing it to crash due to double-free/delete potential.

- Fixed the automatic aggregation of new Graph client nodes
  that are split as either input or output only (ie. system,
  terminal, physical or otherwise non-duplex nodes).

- Added View/Zoom Range mode option to Graph tool.


0.5.1  2018-05-21  Pre-LAC2018 release frenzy.

- Half a decade later, recent new custom entries may now get
  removed from Session Infra-client list.

- Some rather old, better said "Cambric explosion era", user
  preference options have been ditched altogether: Display /
  Time Format; Display / Shiny glass light effect; Display /
  Connections/Draw connections and patchbay lines as Bezier
  curves; Misc/Configure as temporary server.

- A brand new and way long overdue connections Graph widget
  is finally introduced, only to be accessible through the
  context menu at this time.

- Extended multi-selection is now supported on all Connections
  client/port lists, allowing for multiple (dis)connections at
  once.

- Disable singleton/unique application instance setup logic
  when the display server platform is not X11.

- A little hardening on the configure (autoconf) macro side.

